<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_weight="730"
            android:background="@drawable/bg_question"
            android:fontFamily="@font/font_inter"
            android:gravity="center"
            android:text="@string/txt_question"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="InefficientWeight" />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/font_inter"
            android:gravity="start"
            android:maxLines="4"
            android:text="@string/txt_question_read"
            android:textColor="@color/black"
            android:textFontWeight="600"
            android:textSize="16sp"
            android:visibility="visible" />

        <!-- Options -->
        <RadioGroup
            android:id="@+id/rgOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ansA"
                style="@style/ReadingOption"
                app:buttonTint="@color/radio_button_selector"
                android:text="@string/txt_ansA"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/ansB"
                style="@style/ReadingOption"
                app:buttonTint="@color/radio_button_selector"
                android:text="@string/txt_ansB"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/ansC"
                style="@style/ReadingOption"
                app:buttonTint="@color/radio_button_selector"
                android:text="@string/txt_ansC"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/ansD"
                style="@style/ReadingOption"
                app:buttonTint="@color/radio_button_selector"
                android:text="@string/txt_ansD"
                tools:ignore="VisualLintButtonSize" />

        </RadioGroup>
    </LinearLayout>

</androidx.cardview.widget.CardView>
