<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:textFontWeight="700"
                android:background="@drawable/bg_question"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/txt_question"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginEnd="20dp"
                tools:ignore="InefficientWeight" />

            <TextView
                android:id="@+id/tvCorrectWrong"
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:background="@drawable/bg_question"
                android:backgroundTint="@color/color_correct"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/txt_correct"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="12sp"
                tools:ignore="InefficientWeight,TextContrastCheck" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#0052CC"
            android:background="@drawable/bg_listening_ques">

            <ImageView
                android:id="@+id/ivPlay"
                android:layout_width="70dp"
                android:padding="7dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_lv_play"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <SeekBar
                android:layout_gravity="center"
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:progress="0"
                android:max="100"
                android:progressTint="@color/white"
                android:thumbTint="@color/white"
                android:backgroundTint="@color/gray" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/font_inter"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/txt_time_ques_listening"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextSizeCheck" />

        </TableRow>

        <!-- Options -->
        <RadioGroup
            android:id="@+id/rgOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ansA"
                style="@style/ReadingOption"
                android:text="@string/txt_ansA"
                app:buttonTint="@color/radio_button_selector"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/ansB"
                android:layout_marginTop="3dp"
                style="@style/ReadingOption"
                android:text="@string/txt_ansB"
                app:buttonTint="@color/radio_button_selector"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/ansC"
                android:layout_marginTop="3dp"
                style="@style/ReadingOption"
                android:text="@string/txt_ansC"
                app:buttonTint="@color/radio_button_selector"
                tools:ignore="VisualLintButtonSize" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvExplain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/font_inter"
            android:gravity="start"
            android:maxLines="5"
            android:text="@string/txt_explain"
            android:textColor="@color/black"
            android:textFontWeight="600"
            android:textSize="16sp"
            android:visibility="visible" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
